--- a/todo-app/src/app/modules/todo/todo-list/todo-list.component.css
+++ b/todo-app/src/app/modules/todo/todo-list/todo-list.component.css
@@ -10,12 +10,15 @@ table td{
     text-align: center;
 }
 
-.login-form{
+.add-form{
   position:fixed ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   top: 50%;
   left: 50%;
-  width: 40%;
-  height: 30%;
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
   transform: translate(-50%,-50%);
   -webkit-transform: translate(-50%,-50%);
@@ -27,8 +30,10 @@ table td{
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
+
 .card{
-  height: 100%;
+  height: 50%;
+  width: 50%;
   padding: 40px;
   text-align: center;
 }
